Bug 81320 - [all Bisected]igt/kms_flip sub cases crash
Summary: [all Bisected]igt/kms_flip sub cases crash
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Thomas Wood
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-14 05:01 UTC by Guo Jinxian
Modified: 2017-10-06 14:37 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (123.15 KB, text/plain)
2014-07-14 05:01 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-07-14 05:01:31 UTC
Created attachment 102738 [details]
dmesg

==System Environment==
--------------------------
Regression: Yes
It's a igt regression issue
Good commit on igt: 6b986a2044a2708f900454d7e23fcd0bbf68879d
Bad commit on igt: e74dd22ff89e007e637f16f661f06d4857a54224

Non-working platforms: BDW

==kernel==
--------------------------
origin/drm-intel-nightly: 271bff129a641b5b35d99c9eb0ceb866ca42f692(fails)
    drm-intel-nightly: 2014y-07m-12d-12h-07m-51s integration manifest
origin/drm-intel-next-queued: 491a3448622059b087d8c465b46b11f2953df7c1(fails)
    drm/i915: Enable PSR by default.
origin/drm-intel-fixes: ceb9f032dc858c349d7d213454c5ba2c6ef9c5e5(fails)
    Revert "drm/i915: Don't set the 8to6 dither flag when not scaling"

==Bug detailed description==
igt/kms_flip/bcs-flip-vs-dpms fails

Output:
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_flip --run-subtest bcs-flip-vs-dpms
IGT-Version: 1.7-ge74dd22 (x86_64) (Linux: 3.16.0-rc4_drm-intel-next-queued_491a34_20140714+ x86_64)
Using monotonic timestamps
Beginning bcs-flip-vs-dpms on crtc 6, connector 17
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
..Test assertion failure function check_state, file kms_flip.c:557:
Failed assertion: timercmp(&es->last_received_ts, &es->current_ts, <)
flip ts before the flip was issued!
timerdiff -2280s, 291945us
Subtest bcs-flip-vs-dpms: FAIL
Test assertion failure function igt_install_exit_handler, file igt_core.c:1084:
Failed assertion: exit_handler_count < MAX_EXIT_HANDLERS
kms_flip: igt_core.c:655: igt_fail: Assertion `!test_with_subtests || in_fixture' failed.
Test assertion failure function kmstest_force_connector, file igt_kms.c:461:
Failed assertion: debugfs_fd != -1
Last errno: 2, No such file or directory
kms_flip: igt_core.c:655: igt_fail: Assertion `!test_with_subtests || in_fixture' failed.
Aborted
root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# echo $?
134


==Reproduce steps==
---------------------------- 
1. ./kms_flip --run-subtest bcs-flip-vs-dpms
Comment 1 Guo Jinxian 2014-07-16 08:45:10 UTC
This bug still able to reproduce on latest -nightly(77820625217fa547586f00be7cae56e5c5e255bf)

./kms_flip --run-subtest vblank-vs-hang
IGT-Version: 1.7-g428060c (x86_64) (Linux: 3.16.0-rc5_drm-intel-nightly_778206_20140716_debug+ x86_64)
Using monotonic timestamps
Beginning vblank-vs-hang on crtc 7, connector 18
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.............................................................
vblank-vs-hang on crtc 7, connector 18: PASSED

Beginning vblank-vs-hang on crtc 11, connector 18
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.............................................................
vblank-vs-hang on crtc 11, connector 18: PASSED

Beginning vblank-vs-hang on crtc 15, connector 18
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.............................................................
vblank-vs-hang on crtc 15, connector 18: PASSED

Subtest vblank-vs-hang: SUCCESS
Test assertion failure function igt_install_exit_handler, file igt_core.c:1086:
Failed assertion: exit_handler_count < MAX_EXIT_HANDLERS
kms_flip: igt_core.c:657: igt_fail: Assertion `!test_with_subtests || in_fixture' failed.
Aborted (core dumped)
Comment 2 lu hua 2014-07-17 06:28:37 UTC
Bisect shows: eef768f283466b6d7cb3f08381f72ccf3951dc99 is the first bad commit.
commit eef768f283466b6d7cb3f08381f72ccf3951dc99
Author:     Thomas Wood <thomas.wood@intel.com>
AuthorDate: Wed Jun 18 14:28:43 2014 +0100
Commit:     Thomas Wood <thomas.wood@intel.com>
CommitDate: Fri Jul 11 11:47:46 2014 +0100

    tests: enable extra connectors in kms_flip and kms_pipe_crc_basic

    Signed-off-by: Thomas Wood <thomas.wood@intel.com>
Comment 3 Thomas Wood 2014-07-17 10:36:35 UTC
Fixed by commit 8a3853c core: increase the exit handler limit.
Comment 4 Guo Jinxian 2014-07-21 07:06:49 UTC
(In reply to comment #3)
> Fixed by commit 8a3853c core: increase the exit handler limit.

Test doesn't causes crash on latest -nightly(8734408c113bb38234ed03ec51c723b3deff579b). But the result still failed. bug 79052 tracks the fail.

root@x-bdw05:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_flip --run-subtest bcs-flip-vs-dpms
IGT-Version: 1.7-g4d4f4b2 (x86_64) (Linux: 3.16.0-rc5_drm-intel-nightly_873440_20140721_debug+ x86_64)
Using monotonic timestamps
Beginning bcs-flip-vs-dpms on crtc 7, connector 18
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
..Test assertion failure function check_state, file kms_flip.c:557:
Failed assertion: timercmp(&es->last_received_ts, &es->current_ts, <)
flip ts before the flip was issued!
timerdiff -321s, 377867us
Subtest bcs-flip-vs-dpms: FAIL
Comment 5 Elizabeth 2017-10-06 14:37:12 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.